--- a/src/pipeline/makefile
+++ b/src/pipeline/makefile
@@ -2,7 +2,7 @@ CC = gcc -g
 FLAGS = -Wall -g3
 EXTERNAL_LIBRARIES = -lm -ljpeg
 
-TARGETS=read grayscale
+TARGETS=read grayscale convolution binarize classify write
 
 all: $(TARGETS)
 
